# llp-solver

./: .gitignore  README.md
.github/workflows/: build-wasm.yml
frontend/: next.config.ts
frontend/app/: page.tsx
frontend/components/: ConstraintEditor.tsx  Graph.tsx  ObjectiveEditor.tsx  ResultsPanel.tsx  VertexTable.tsx
frontend/hooks/: useSolver.ts
frontend/lib/: mapping.ts  solverClient.ts  types.ts
frontend/lib/wasm/: package.json  solver_core.d.ts  solver_core.js  solver_core_bg.wasm  solver_core_bg.wasm.d.ts
solver-core/: Cargo.toml
solver-core/src/: feasibility.rs  geometry.rs  intersections.rs  lib.rs  optimizer.rs  parser.rs  types.rs
solver-core/tests/: solver_tests.rs
